--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,16 @@
+/* GLOBAL STYLES */
+
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
-body {
+main {
     background-color: #d9dcd6;
 }
+
+/* HEADER STYLES */
 
 .header {
     padding: 20px;
@@ -24,7 +28,9 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+/* NAVIGATION */
+
+.nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,23 +38,14 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
-    list-style-type: none;
-}
-
-.header div ul li {
+.nav a {
+    color: #ffffff;
+    text-decoration: none;
     display: inline-block;
     margin-left: 25px;
 }
 
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
-
-p {
-    font-size: 16px;
-}
+/* HERO IMAGE */
 
 .hero {
     height: 800px;
@@ -58,6 +55,8 @@ p {
     background-size: cover;
     background-position: center;
 }
+
+/* SECTION CONTENT */
 
 .float-left {
     float: left;
@@ -75,6 +74,12 @@ p {
     margin-left: 20px;
 }
 
+p {
+    font-size: 16px;
+}
+
+/* ASIDE CONTENT */
+
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -86,55 +91,26 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit-lead, .benefit-brand, .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefit-lead img, .benefit-brand img, .benefit-cost img  {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization {
+.search-engine-optimization,
+.online-reputation-management,
+.social-media-marketing
+{
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -143,50 +119,22 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
+.search-engine-optimization img,
+.online-reputation-management img,
+.social-media-marketing img
+ {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
+.search-engine-optimization h2, 
+.online-reputation-management h2,
+.social-media-marketing h2
+{
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
+/* FOOTER STYLES */
 
 .footer {
     padding: 30px;
